--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ quarkus.http.auth.permission.default.policy=authenticated
 # TEST
 quarkus.test.integration-test-profile=test
 quarkus.test.enable-callbacks-for-integration-tests=true
-#%test.quarkus.keycloak.admin-client.server-url=${keycloak.url}
-#%test.quarkus.keycloak.devservices.roles.alice=onecx-portal-super-admin,onecx-admin,onecx-test
-#%test.quarkus.keycloak.devservices.roles.bob=onecx-portal-admin,onecx-user
+%test.quarkus.keycloak.admin-client.server-url=${keycloak.url}
+%test.quarkus.keycloak.devservices.roles.alice=onecx-portal-super-admin,onecx-admin,onecx-test
+%test.quarkus.keycloak.devservices.roles.bob=onecx-portal-admin,onecx-user
 %test.smallrye.jwt.verify.key.location=${keycloak.url}/realms/quarkus/protocol/openid-connect/certs
 # DEV
 %dev.quarkus.keycloak.admin-client.server-url=${keycloak.url}
