feat: flag to indicate IT

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,24 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven.surefire-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <isIntegrationTest>true</isIntegrationTest>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.tkit.maven</groupId>
                 <artifactId>tkit-docs-quarkus-plugin</artifactId>
                 <executions>
