feat: update parent to 1.2.0, update docker images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ keycloak.cors=true
 %test.onecx.iam.keycloaks.kc0.description=description
 %test.onecx.iam.keycloaks.kc0.display-name=keycloak 0
 %test.onecx.iam.keycloaks.kc0.url=${kc0.url}
-%test.onecx.iam.keycloaks.kc0.issuerHost=${kc0.url}
+%test.onecx.iam.keycloaks.kc0.issuerHost=${kc0.client.url}
 %test.onecx.iam.keycloaks.kc0.realm=master
 %test.onecx.iam.keycloaks.kc0.secret=" "
 %test.onecx.iam.keycloaks.kc0.client=admin-cli
@@ -35,7 +35,7 @@ keycloak.cors=true
 %test.onecx.iam.keycloaks.kc1.description=description
 %test.onecx.iam.keycloaks.kc1.display-name=keycloak 1
 %test.onecx.iam.keycloaks.kc1.url=${kc1.url}
-%test.onecx.iam.keycloaks.kc1.issuerHost=${kc1.url}
+%test.onecx.iam.keycloaks.kc1.issuerHost=${kc1.client.url}
 %test.onecx.iam.keycloaks.kc1.realm=master
 %test.onecx.iam.keycloaks.kc1.secret=" "
 %test.onecx.iam.keycloaks.kc1.client=admin-cli
