--- a/src/main/openapi/onecx-iam-svc-internal.yaml
+++ b/src/main/openapi/onecx-iam-svc-internal.yaml
@@ -269,6 +269,8 @@ components:
      type: string
     origin:
      type: string
+    provider:
+     type: string
     domain:
      type: string
     createdTimestamp:
