feat: allow assignment of multiple roles at once

--- a/src/main/openapi/onecx-iam-svc-internal.yaml
+++ b/src/main/openapi/onecx-iam-svc-internal.yaml
@@ -387,8 +387,10 @@ components:
    properties:
     issuer:
      type: string
-    name:
-     type: string
+    names:
+     type: array
+     items:
+      type: string
   CreateUserRequest:
    type: object
    required:
