feat: adjusted tests for kc 26.2 and added failsafety if provider is not available

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,16 @@ keycloak.cors=true
 %test.onecx.iam.keycloaks.kc1.client=admin-cli
 %test.onecx.iam.keycloaks.kc1.username=admin
 %test.onecx.iam.keycloaks.kc1.password=admin
-
+#third kc (without mocks)
+%test.onecx.iam.keycloaks.kc2.description=description
+%test.onecx.iam.keycloaks.kc2.display-name=keycloak 2
+%test.onecx.iam.keycloaks.kc2.url=http//localhost
+%test.onecx.iam.keycloaks.kc2.issuerHost=http//localhost
+%test.onecx.iam.keycloaks.kc2.realm=master
+%test.onecx.iam.keycloaks.kc2.secret=" "
+%test.onecx.iam.keycloaks.kc2.client=admin-cli
+%test.onecx.iam.keycloaks.kc2.username=admin
+%test.onecx.iam.keycloaks.kc2.password=admin
 # PIPE CONFIG
 
 
